1.4: 4/6/2017
	* Added initialWaitTimeMillis to not log initially when application starts up.

1.3: 4/5/2017
	* Fixed the thread name in the output.  Sigh.

1.2: 4/5/2017
	* Better handling of initialization errors and other internal log messages.

1.1: 4/3/2017
	* Added support for the DefaultAWSCredentialsProviderChain.  Thanks to efenderbosch.

1.0: 3/21/2017
	* Removed extraneous exception handling since the layout does it for us.
	* Fixed some of the emergency appender stop/stop logic.

0.4: 3/15/2017
	* Moved the initialization of the AWS log client to later to stop log recursion.

0.3: 3/14/2017
	* Added support for an emergency log appender in case the remoting fails.
	* Removed the queue startup delay which wasn't needed

0.2: 3/14/2017
	* Switched to using a standard pattern layout.
	* Added Ec2PatternLayout to support EC2 instance-name and instance-id.

0.1: 3/14/2017
	* Initial public release.